--- a/tempapp/static/main.css
+++ b/tempapp/static/main.css
@@ -32,20 +32,27 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.form-box {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap:0.3em;
+}
+
 .btn-group {
   display: grid;
-  grid-template-columns: repeat(20, 1fr);
+  grid-template-columns: repeat(15, 1fr);
   grid-gap:0.3em;
 }
 
 
-.btn-group button {
+.btn-group .button {
   background-color: #853562;
   border: 1px solid #e3b9d1;
   color: white;
   border-radius: 3px;
-  font-weight: 400;
-  font-size: 1em;
+  font-weight: 100;
+  font-size: 0.8em;
+  text-align:center;
 }
 
 .btn-group button:not(:last-child) {
@@ -56,18 +63,30 @@ h1, h2, h3, h4, h5, h6 {
   opacity:0.8;
 }
 
+#myChart{
+     width: 800;
+     height: 200;
+
+}
+
+a p{
+    font-weight: 400;
+    font-size: 1em;
+}
+
+
 @media screen and (max-width: 700px) {
     .btn-group {
       display: grid;
-      grid-template-columns: repeat(10, 1fr);
+      grid-template-columns: repeat(6, 1fr);
       grid-gap:0.1em;
     }
-    .btn-group button {
+    .btn-group .button {
       background-color: #853562;
       border: 1px solid #e3b9d1;
       color: white;
       border-radius: 3px;
       font-weight: 400;
-      font-size: 0.8em;
+      font-size: 0.3em;
     }
 }
