adding archivise chart route, in progress

--- a/tempapp/templates/dashboard.html
+++ b/tempapp/templates/dashboard.html
@@ -30,6 +30,7 @@
                 </div>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
+                <a class="button" href="{{ url_for('archivise')}}">clear chart</a>
             </div>
         </div>
     </form>
