rename chart feature

--- a/tempapp/static/main.css
+++ b/tempapp/static/main.css
@@ -34,9 +34,26 @@ h1, h2, h3, h4, h5, h6 {
 
 .form-box {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(5, 1fr);
   grid-gap:0.3em;
 }
+
+.input-section{
+  grid-column: 1/2;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 0.5em;
+}
+
+
+
+.management-section{
+  grid-column: 5/6;
+}
+
+
+
+
 
 .btn-group {
   display: grid;
