--- a/tempapp/templates/dashboard.html
+++ b/tempapp/templates/dashboard.html
@@ -4,34 +4,36 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <div class="form-box">
-            <div class="form-group">
+            <div class="input-section">
+                <div class="form-group">
                     {% if form.temp.errors %}
-                        {{ form.temp(class="form-control form-control-lg is-invalid") }}
+                        {{ form.temp(class="form-control form-control is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.temp.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.temp(class="form-control form-control-lg") }}
+                        {{ form.temp(class="form-control form-control") }}
                     {% endif %}
                 </div>
-            <div class="form-group">
+                <div class="form-group">
                     {% if form.notes.errors %}
-                        {{ form.notes(class="form-control form-control-lg is-invalid") }}
+                        {{ form.notes(class="form-control form-control is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.notes.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.notes(class="form-control form-control-lg") }}
+                        {{ form.notes(class="form-control form-control") }}
                     {% endif %}
             </div>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
-                <a class="button" href="{{ url_for('archivise')}}">clear chart</a>
-                <a class="button" href="{{ url_for('old_records')}}">history</a>
+                <div class="form-group">{{ form.submit(class="btn btn-info ") }}</div>
+            </div>
+            <div class="management-section">
+                <a class="btn btn-info" href="{{ url_for('archivise')}}">Clear chart</a>
+                <a class="btn btn-info" href="{{ url_for('old_records')}}">History</a>
             </div>
         </div>
     </form>
