--- a/tempapp/templates/layout.html
+++ b/tempapp/templates/layout.html
@@ -27,7 +27,7 @@
                   <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav ml-auto">
                         {% if current_user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{{ url_for('dashboard') }}">DASHBOARD</a>
+                        <a class="nav-item nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
                         <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                         {% else %}
