--- a/tempapp/static/main.css
+++ b/tempapp/static/main.css
@@ -8,6 +8,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #000000;
 }
 
+.day-info{
+  font-size: 1.4em;
+  font-weight: 600;
+}
+
 .bg-steel {
   background-color: #43BC78;
 }
