--- a/tempapp/templates/dashboard.html
+++ b/tempapp/templates/dashboard.html
@@ -8,6 +8,9 @@
                 <div class="form-group">
                     {% if form.temp.errors %}
                         {{ form.temp(class="form-control form-control is-invalid") }}
+                        <small class="text-muted">
+                        {{ form.temp.label(class="form-control-label") }}
+                        </small>
                         <div class="invalid-feedback">
                             {% for error in form.temp.errors %}
                                 <span>{{ error }}</span>
@@ -15,18 +18,28 @@
                         </div>
                     {% else %}
                         {{ form.temp(class="form-control form-control") }}
+                        <small class="text-muted">
+                        {{ form.temp.label(class="form-control-label") }}
+                        </small>
                     {% endif %}
                 </div>
                 <div class="form-group">
                     {% if form.notes.errors %}
                         {{ form.notes(class="form-control form-control is-invalid") }}
+                        <small class="text-muted">
+                        {{ form.notes.label(class="form-control-label") }}
+                        </small>
                         <div class="invalid-feedback">
                             {% for error in form.notes.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
+
                         {{ form.notes(class="form-control form-control") }}
+                        <small class="text-muted">
+                        {{ form.notes.label(class="form-control-label") }}
+                        </small>
                     {% endif %}
             </div>
                 <div class="form-group">{{ form.submit(class="btn btn-info ") }}</div>
